--- a/index.html
+++ b/index.html
@@ -6,11 +6,16 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Employee Directory</title>
+
+  <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
   <main></main>
-  <script src="js/app.js"></script>
+  <script src="js/Helpers.js"></script>
+  <script src="js/Employee/Modal.js"></script>
+  <script src="js/Employee/Card.js"></script>
+  <script src="js/App.js"></script>
 </body>
 
 </html>
