Refactor into components

--- a/index.html
+++ b/index.html
@@ -11,10 +11,11 @@
 </head>
 
 <body>
-  <main></main>
+  <main id="app"></main>
   <script src="js/Helpers.js"></script>
   <script src="js/Employee/Modal.js"></script>
   <script src="js/Employee/Card.js"></script>
+  <script src="js/Employee/List.js"></script>
   <script src="js/App.js"></script>
 </body>
 
