Link normalize and add h1

--- a/index.html
+++ b/index.html
@@ -7,11 +7,15 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Employee Directory</title>
 
+  <link rel="stylesheet" href="css/normalize.css">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans|Raleway:300,400" rel="stylesheet">
   <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
-  <main id="app"></main>
+  <main id="app">
+    <h1>Employee Directory</h1>
+  </main>
   <script src="js/Helpers.js"></script>
   <script src="js/Employee/Modal.js"></script>
   <script src="js/Employee/Card.js"></script>
