Style Card component

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <title>Employee Directory</title>
 
   <link rel="stylesheet" href="css/normalize.css">
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans|Raleway:300,400" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Raleway:300,400" rel="stylesheet">
   <link rel="stylesheet" href="css/styles.css">
 </head>
 
