Filter by username or name

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
   <script src="js/Employee/Modal.js"></script>
   <script src="js/Employee/Card.js"></script>
   <script src="js/Employee/List.js"></script>
+  <script src="js/Employee/Filter.js"></script>
   <script src="js/App.js"></script>
 </body>
 
