--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 <body>
   <main id="app">
     <h1>Employee Directory</h1>
+    <p class="background__p">You need JavaScript enabled to use this app.</p>
   </main>
   <script src="js/Helpers.js"></script>
   <script src="js/Employee/Modal.js"></script>
